# datascience_tools

./: README.md  WhiskerOutliers_demo.ipynb  pyproject.toml  requirements.txt  scikit-learn-whiskers_demo.ipynb
src/: setup.py
src/datascience_tools/: __init__.py
src/datascience_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/datascience_tools/ouliers/: WhiskerOutliers.py
src/scikit_learn_whiskers.egg-info/: PKG-INFO
src/sklearn_whiskers/: __init__.py
src/sklearn_whiskers/ouliers/: WhiskerOutliers.py
src/sklearn_whiskers/outliers/: StandardOutliers.py  WhiskerOutliers.py
test/data/: synthetic_data.csv
test/outliers/: test_WhiskerOutliers.py
