[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datascience_tools"
version = "0.1.0"
authors = [
  { name="Martin Carlos Araya", email="martinaraya@gmail.com" },
]
description = "a few tools I have found handy to facilitate some datascience and machine learning tasks."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    ]
[project.urls]
"Homepage" = "https://github.com/ayaranitram/datascience_tools"
"Bug Tracker" = "https://github.com/ayaranitram/unyts/datascience_tools"
